--- a/Træpisseren/Træpisseren/Træpisseren.csproj
+++ b/Træpisseren/Træpisseren/Træpisseren.csproj
@@ -38,7 +38,7 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Gmeworld.cs" />
+    <Compile Include="Gameworld.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Workers.cs" />
