--- a/Træpisseren/Træpisseren/Træpisseren.csproj
+++ b/Træpisseren/Træpisseren/Træpisseren.csproj
@@ -38,6 +38,13 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ComponentsPattern\Components\Component.cs" />
+    <Compile Include="ComponentsPattern\Components\SpriteRenderer.cs" />
+    <Compile Include="ComponentsPattern\Components\Transform.cs" />
+    <Compile Include="ComponentsPattern\GameObject.cs" />
+    <Compile Include="ComponentsPattern\Interfaces\IDrawable.cs" />
+    <Compile Include="ComponentsPattern\Interfaces\ILoadable.cs" />
+    <Compile Include="ComponentsPattern\Interfaces\IUpdateable.cs" />
     <Compile Include="Gameworld.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
