--- a/Træpisseren/Træpisseren/Træpisseren.csproj
+++ b/Træpisseren/Træpisseren/Træpisseren.csproj
@@ -45,11 +45,11 @@
     <Compile Include="ComponentsPattern\Interfaces\IDrawable.cs" />
     <Compile Include="ComponentsPattern\Interfaces\ILoadable.cs" />
     <Compile Include="ComponentsPattern\Interfaces\IUpdateable.cs" />
+    <Compile Include="ComponentsPattern\Worker.cs" />
     <Compile Include="Gameworld.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resurser.cs" />
-    <Compile Include="Workers.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
