--- a/Træpisseren/Træpisseren/Træpisseren.csproj
+++ b/Træpisseren/Træpisseren/Træpisseren.csproj
@@ -40,10 +40,12 @@
   <ItemGroup>
     <Compile Include="Animation.cs" />
     <Compile Include="ComponentsPattern\Base.cs" />
+    <Compile Include="ComponentsPattern\Components\Animator.cs" />
     <Compile Include="ComponentsPattern\Components\Component.cs" />
     <Compile Include="ComponentsPattern\Components\SpriteRenderer.cs" />
     <Compile Include="ComponentsPattern\Components\Transform.cs" />
     <Compile Include="ComponentsPattern\GameObject.cs" />
+    <Compile Include="ComponentsPattern\Interfaces\IAnimateable.cs" />
     <Compile Include="ComponentsPattern\Interfaces\IDrawable.cs" />
     <Compile Include="ComponentsPattern\Interfaces\ILoadable.cs" />
     <Compile Include="ComponentsPattern\Interfaces\IUpdateable.cs" />
